--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,43 @@
 # Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
+repository: xzile/xzile.github.io
+favicon: assets/favicon.ico
 
 # Content configuration version
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+name: Jonathan Hopson
+title: Sr. Software Engineer
+#email: xzile.jonhopson@gmail.com
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+#phone: 606-687-0745
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+website: https://github.com/xzile
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-stackoverflow_username: "00000001"
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
-orcid_username: 0000-0000-0000-0000
+twitter_username: jon_hopson
+github_username:  xzile
+#stackoverflow_username: "00000001"
+#dribbble_username: jekyll
+#facebook_username: jekyll
+#flickr_username: jekyll
+#instagram_username: jekyll
+linkedin_username: jonathan-hopson-37831158
+#xing_username: jekyll
+#pinterest_username: jekyll
+#youtube_username: jekyll
+#googleplus_username: +jekyll
+#orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+#additional_links:
+#- title: Link name
+#  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#  url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
@@ -50,67 +50,87 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/headshot.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  Self-motivated problem solver. I have worked in the higher education software business since 2007; working remotely from my home in Tennessee on teams ranging from 2 to 15.
 
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+  Strengths:
+  - PHP / Laravel
+  - Ruby / Rails
+  - Database Design, Performance, and Optimization
+  - AWS Services
+
+  Emerging Interests:
+  - Front-end Engineering (Angular)
+  - Erlang / Elixir
 
 content:
-  - title: Projects # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Project name
-        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        link_text: Link Text
-        additional_links:
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        quote: >
-          Short overview of the project (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
   - title: Experience
     layout: list
     content:
       - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
-        quote: >
-          Short description of the company (optional)
+        title: Interfolio
+        sub_title: Sr. Software Engineer
+        caption: January 2017 - present
+        link: https://interfolio.com
+#        quote: >
+#          Short description of the company (optional)
         description: | # this will include new lines to allow paragraphs
-          Description of role
+          Interfolio acquired Data180 in January 2017. Initially, I assisted in the transition of Faculty180 into the Interfolio ecosystem. This included a migration to Git, moving hosting to AWS, integrating Laravel into our legacy monolith, and adapting users and authentication to the existing Interfolio infrastructure.
+
+          Over time, I expanded to develop and maintain a majority of the Interfolio backend software suite, largely written in Ruby/Rails.  While also helping design and develop several greenfield microservices, as well as automation integration software for the CI/CD process.
+
+          Skills include:
+          - PHP/Laravel
+          - Ruby/Rails
+          - GraphQL
+          - PostgreSQL
+          - MySQL
+          - Git
+          - Docker
+          - AWS Services (S3, SNS, SQS, DynamoDB, etc.)
+          - Integration with internal and third-party software
+          - Agile Software Development
+      - layout: right
+        title: Data180
+        sub_title: Software Engineer
+        caption: March 2007 - January 2017
+        link: https://data180.com
+#        quote: >
+#          Short description of the company (optional)
+        description: | # this will include new lines to allow paragraphs
+          From a brief stint as QA as I finished my degree. I was later hired on as a full-time software engineer to help develop and support Data180’s flagship product, Faculty180, a higher-education faculty data and activity tracking system.
+
+          Later on, I was the lead engineer for their student product, which supported students and schools with activity tracking, co-curricular transcripts, resumes, and assessments.
+
+          Skills include:
+          - PHP
+          - PostgreSQL
+          - jQuery
+          - SVN
+          - Integration with third party APIs
   - title: Education
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
-        quote: >
-          Short institution or course description (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of qualification
+        title: Morehead State University
+        sub_title: Bachelors in Business Administration (Computer Information Systems)
+        caption: 2003 - 2007
+#        quote: >
+#          Short institution or course description (optional)
+#        description: | # this will include new lines to allow paragraphs
+#          Description of qualification
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
+      I love writing software and building solutions. When I’m not problem-solving via code, I’m problem-solving or puzzle creating in Dungeons & Dragons as both a player and a game master.
 
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+      D&D teaches many non-technical skills. As a player, you are constantly working as a team, playing off your party members' strengths and understanding each other's weaknesses. It also teaches you how to share the spotlight amongst a group, taking strides to both lead and follow.
+
+      As a game master, your responsibilities are endless. Quick decision making, designing encounters to both challenges and showcase your players, and describe the world your players are in and the individuals they are interacting with. Thinking on your feet is a necessity, as a group of unpredictable players can quickly throw a wrench into any pre-planned ideas you have.
 
 # Footer
-footer_show_references: true
+#footer_show_references: true
 # references_title: References on request (Override references text)
 
 # Build settings
